--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section id="gallery">
             <h2>Bộ sưu tập</h2>
             <div class="frog-gallery">
-                <img src="https://i.pinimg.com/736x/7b/13/cb/7b13cb16bb226db7edafa388939ed120.jpg " alt="Ếch 1" width="111">
+                <img src="https://i.pinimg.com/736x/7b/13/cb/7b13cb16bb226db7edafa388939ed120.jpg " alt="Ếch 1">
                 <img src="https://i.pinimg.com/736x/e1/3f/4d/e13f4d519863cbbb1f23f65ae27827ed.jpg" alt="Ếch 2">
                 <img src="https://i.pinimg.com/736x/0d/39/b3/0d39b366d69bb4ac84c69212b8d1ee27.jpg" alt="Ếch 3">
                 <img src="https://i.pinimg.com/736x/70/00/c8/7000c86cd570b7bea9c99082d88d2a35.jpg" alt="Ếch 4">
@@ -88,7 +88,7 @@
 
             <h3>Ếch Châu Á</h3>
             <p>Ếch ở Châu Á thường sống ở các khu vực rừng nhiệt đới và có nhiều loài có màu sắc sặc sỡ để ngụy trang hoặc cảnh báo kẻ thù.</p>
-            <img src="https://i.pinimg.com/736x/ed/f6/c7/edf6c78357115e9b9bb804e4b95604a5.jp" alt="Ếch Châu Á">
+            <img src="https://i.pinimg.com/736x/0c/7e/6a/0c7e6a7b164f54abbdac08a1fb5a5b7f.jpg" alt="Ếch Châu Á">
 
             <h3>Ếch Châu Phi</h3>
             <p>Ếch Châu Phi nổi tiếng với khả năng thích nghi trong môi trường khô hạn, nhiều loài sống ở các vùng đồng cỏ hoặc sa mạc.</p>
