--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <header>
-        <h1>Soi Ếch VN</h1>
+        <h1><b>Soi Ếch VN</b></h1>
 	<hr>
         <h4 style :"font-size:10px" >Website soi ếch số 1 Việt Nam!</h4>
     </header>
