--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 				
             <div class="video-row">
                 <video width="320 " autoplay loop controls><source src="https://cdn.pixabay.com/video/2023/06/05/165849-833532197_large.mp4" type="video/mp4"></video>
-                <video width="320" controls><source src="https://cdn.pixabay.com/video/2024/05/21/212909_tiny.mp4" type="video/mp4"></video>
-                <video width="320" controls><source src="https://cdn.pixabay.com/video/2022/02/03/106568-673570279_tiny.mp4" type="video/mp4"></video>
-	            <video width ="320" height ="240" controls><source src="https://cdn.pixabay.com/video/2023/01/31/148724-794599269_tiny.mp4" type="video/mp4"></video>
+                <video width="320" autoplay loop controls><source src="https://cdn.pixabay.com/video/2024/05/21/212909_tiny.mp4" type="video/mp4"></video>
+                <video width="320" autoplay loop controls><source src="https://cdn.pixabay.com/video/2022/02/03/106568-673570279_tiny.mp4" type="video/mp4"></video>
+	            <video width ="320" height ="240" autoplay loop controls><source src="https://cdn.pixabay.com/video/2023/01/31/148724-794599269_tiny.mp4" type="video/mp4"></video>
 	
             </div>
 
