--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Soi Ếch TV. Trang web soi ếch số 1 Đông Nam Á</title>
 	<div class="head">
 	<h1>Soi Ếch VN</h1>                          
-    <h4  style :"font-size= 10px" ><sup>Website soi ếch số 1 Việt Nam!</sup></h4>
+    <h4  style :"font-size: 10px" ><sup>Website soi ếch số 1 Việt Nam!</sup></h4>
 	<nav>
         <a href="#about">Giới thiệu</a>
         <a href="#gallery">Bộ sưu tập</a>
@@ -34,7 +34,7 @@
 			font-weight: bold;
 			margin-bottom:0px;
 		}
-	</style
+	</style>
 	</head>
 
     <style>
@@ -50,7 +50,7 @@
         }
         .header {
               background-image: url('https://i.pinimg.com/736x/02/5b/cf/025bcf9a30cdc91ff066c451fe972f1e.jpg'); 
-              background-size: 2100px;
+              background-size: cover;
               background-position: center;
               height: 700px;
               text-align: center;
@@ -98,7 +98,7 @@
         footer {
             background-color: #FFA500;
             color: white;
-            text-align: left-side;
+            text-align: left;
             padding: 10px;
             margin-top: 20px;
         }
