--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+	    font-size: 40 px;
             margin: 0;
             padding: 0;
             background-color: #0A0A0A;
